--- a/Creative Pod/Base.lproj/LaunchScreen.storyboard
+++ b/Creative Pod/Base.lproj/LaunchScreen.storyboard
@@ -1,19 +1,54 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="ipad9_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="modeg.ttf">
+            <string>ModeG-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="87j-hS-10A">
+                                <rect key="frame" x="157.5" y="378" width="453" height="267.5"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ArtlinkLogo" translatesAutoresizingMaskIntoConstraints="NO" id="HQu-7O-B1l">
+                                        <rect key="frame" x="10" y="0.0" width="433" height="113"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Creative Pod" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5CR-Iv-XPc">
+                                        <rect key="frame" x="10" y="138" width="433" height="129.5"/>
+                                        <fontDescription key="fontDescription" name="ModeG-Regular" family="Mode G" pointSize="65"/>
+                                        <color key="textColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="5CR-Iv-XPc" firstAttribute="leading" secondItem="87j-hS-10A" secondAttribute="leading" constant="10" id="1mp-8O-U8m"/>
+                                    <constraint firstItem="HQu-7O-B1l" firstAttribute="leading" secondItem="87j-hS-10A" secondAttribute="leading" constant="10" id="E5l-P0-Jgp"/>
+                                    <constraint firstAttribute="trailing" secondItem="HQu-7O-B1l" secondAttribute="trailing" constant="10" id="Xvb-6m-vGF"/>
+                                    <constraint firstAttribute="trailing" secondItem="5CR-Iv-XPc" secondAttribute="trailing" constant="10" id="ekI-iZ-oAh"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="87j-hS-10A" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ygU-iD-zQ3"/>
+                            <constraint firstItem="87j-hS-10A" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="zQT-Bk-gVj"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -22,4 +57,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ArtlinkLogo" width="273" height="113"/>
+    </resources>
 </document>
