--- a/Creative Pod/Base.lproj/Main.storyboard
+++ b/Creative Pod/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qpE-b8-Mbz">
                                 <rect key="frame" x="10" y="412.5" width="814" height="74"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RZj-CC-pQw">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your name or email as necessary:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RZj-CC-pQw">
                                         <rect key="frame" x="0.0" y="0.0" width="814" height="34"/>
                                         <fontDescription key="fontDescription" name="ModeG-Regular" family="Mode G" pointSize="17"/>
                                         <color key="textColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -647,6 +647,7 @@
                         <outlet property="storiesTableView" destination="S6t-2E-BDu" id="muO-0l-lbW"/>
                         <segue destination="Rpd-ll-zeC" kind="showDetail" identifier="ViewMembersInGroup" id="8K8-8f-Rdu"/>
                         <segue destination="vfU-Fa-5f3" kind="showDetail" identifier="CreatingNewStory" id="xnL-LZ-2Xi"/>
+                        <segue destination="BYZ-38-t0r" kind="showDetail" identifier="LoggedOut" id="IaZ-rC-Ahp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VkW-cZ-bQZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1271,36 +1272,36 @@
                                 <rect key="frame" x="0.0" y="149.5" width="834" height="962.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yBM-qh-hC9">
-                                    <size key="itemSize" width="394" height="441"/>
+                                    <size key="itemSize" width="405" height="468"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" reuseIdentifier="CreativeProductCell" id="r6W-Mj-DGO" customClass="CreativeProductCell" customModule="Creative_Pod" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="441"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="405" height="468"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="394" height="441"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="405" height="468"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zB6-tF-mPj">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="zB6-tF-mPj">
                                                     <rect key="frame" x="8" y="8" width="418" height="460"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="27x-Xh-re8">
-                                                            <rect key="frame" x="0.0" y="0.0" width="394" height="407"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="405" height="404"/>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Psj-yd-JQi">
-                                                            <rect key="frame" x="0.0" y="407" width="394" height="34"/>
+                                                            <rect key="frame" x="0.0" y="434" width="405" height="34"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dated:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Wi-G5-Thb">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="115.5" height="34"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="118.5" height="34"/>
                                                                     <fontDescription key="fontDescription" name="ModeG-Regular" family="Mode G" pointSize="17"/>
                                                                     <color key="textColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23/12/2018 - 2pm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RDE-57-sQA">
-                                                                    <rect key="frame" x="115.5" y="0.0" width="278.5" height="34"/>
+                                                                    <rect key="frame" x="118.5" y="0.0" width="286.5" height="34"/>
                                                                     <fontDescription key="fontDescription" name="ModeG-Regular" family="Mode G" pointSize="17"/>
                                                                     <color key="textColor" red="0.0" green="0.61568627450000002" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -1317,7 +1318,7 @@
                                             <constraint firstAttribute="trailing" secondItem="zB6-tF-mPj" secondAttribute="trailing" id="cIU-sw-H4H"/>
                                             <constraint firstAttribute="bottom" secondItem="zB6-tF-mPj" secondAttribute="bottom" id="iwb-PK-7Ea"/>
                                         </constraints>
-                                        <size key="customSize" width="394" height="441"/>
+                                        <size key="customSize" width="405" height="468"/>
                                         <connections>
                                             <outlet property="creativeImg" destination="27x-Xh-re8" id="e24-hs-l1V"/>
                                             <outlet property="datedLbl" destination="RDE-57-sQA" id="Yvo-HU-D5s"/>
@@ -1576,7 +1577,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="cP0-fp-rFH"/>
         <segue reference="xVH-VO-OMk"/>
-        <segue reference="AWM-uG-bNj"/>
+        <segue reference="xnL-LZ-2Xi"/>
         <segue reference="HAK-Fh-9Ct"/>
     </inferredMetricsTieBreakers>
 </document>
